git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@644 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -98,7 +98,7 @@ msg.pwsent=A new password was sent to {0}.
 msg.unknownEmail=The email address you entered is not registered with MetaboLights.
 msg.newAccount=Enter your details to request a new account for MetaboLights.
 msg.updateAccount=These are your account details. You can make changes to the current values.
-msg.accountInactive=This account is not active (yet).
+msg.accountInactive=This account is not active (yet). It needs to be activated by the MetaboLights team.
 msg.starRequired=(*) indicates required field
 msg.mainPage=Back to the main page.
 msg.feedbackAccountRequestedHeader=New account created
@@ -125,10 +125,8 @@ msg.to=to
 msg.emailSent=Message Sent
 msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
-msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies.
+msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies, and now you can filter by Privacy status.
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
-msg.submitted=You've submitted
-msg.studies=studies
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
