Updated About and Contact on home page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@648 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -45,8 +45,8 @@ label.description=Description
 label.design=Design(s)
 label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
-label.contact=Contact Us 
-label.aboutMetab=About Metabolights 
+label.contact=Contact Us
+label.aboutMetab=About Metabolights
 label.message=Message to the MetaboLights team
 
 menu.home=home
@@ -56,7 +56,7 @@ menu.login=log in
 menu.myAccount=account
 menu.logout=log out
 menu.loggedInAs=Logged in as
-menu.contact=Contact Us
+menu.contact=Contact us
 menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
 menu.downloadHelp=How to download data from MetaboLights
