--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -45,8 +45,7 @@ label.description=Description
 label.design=Design(s)
 label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
-label.contact=Contact Us
-label.aboutMetab=About Metabolights
+label.contact=Contact MetaboLights 
 label.message=Message to the MetaboLights team
 
 menu.home=home
@@ -56,14 +55,14 @@ menu.login=log in
 menu.myAccount=account
 menu.logout=log out
 menu.loggedInAs=Logged in as
-menu.contact=Contact us
+menu.contact=Contact Us
 menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
 menu.downloadHelp=How to download data from MetaboLights
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
-msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information. The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
+msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments. <a href="about">About MetaboLights.</a>
 msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structres.  
 msg.metabolightsAbout3=We will also offer user-submission tools and have strong reporting capabilities. We will utilise and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
 msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
@@ -127,6 +126,9 @@ msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
 msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies, and now you can filter by Privacy status.
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
+msg.submitted=You've submitted
+msg.studies=studies
+mgs.ftpDownload=Download experiment
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
