New ftp download links on the entry page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@659 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -47,6 +47,8 @@ label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
 label.contact=Contact MetaboLights 
 label.message=Message to the MetaboLights team
+label.aboutMetab=About Metabolights
+label.ftpDownload=Download experiment
 
 menu.home=home
 menu.submit=submit
@@ -128,7 +130,6 @@ msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies, and now you ca
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 msg.submitted=You've submitted
 msg.studies=studies
-mgs.ftpDownload=Download experiment
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
