--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -12,7 +12,8 @@ label.file=File
 label.isatabZipFile=ISA-Tab zip file
 label.filename=File name
 label.upload=Upload
-label.experimentstatuspublic=Make it public
+label.experimentstatuspublic=Make it public now?
+label.experimentMsgPublic=You can keep the experiment private to you, or make it public
 label.email=Email address
 label.remind=Remind me
 label.resetPw=Reset password
@@ -60,7 +61,7 @@ menu.loggedInAs=Logged in as
 menu.contact=Contact Us
 menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
-menu.downloadHelp=How to download data from MetaboLights
+menu.downloadHelp=Download data from MetaboLights
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
