Get release dates from submission form, place into investigation file
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@675 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -28,7 +28,8 @@ label.country=Country
 label.create=Create
 label.cancel=Cancel
 label.update=Update
-label.releaseDate=Study Release Date
+label.releaseDate=Study Public Release Date
+label.subDate=Study Submission Date
 label.expFact=Experimental factors
 label.expId=Study identifier
 label.subm=Submitted by
