--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -47,7 +47,7 @@ label.description=Description
 label.design=Design(s)
 label.properties=Propertie(s)
 label.sampleAttr=Sample Attribute(s)
-label.contact=Contact MetaboLights 
+label.contact=Contact us 
 label.message=Message to the MetaboLights team
 label.aboutMetab=About Metabolights
 label.ftpDownload=Download experiment
@@ -59,7 +59,7 @@ menu.login=log in
 menu.myAccount=account
 menu.logout=log out
 menu.loggedInAs=Logged in as
-menu.contact=Contact Us
+menu.contact=contact
 menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
 menu.downloadHelp=Download data from MetaboLights
