--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -72,8 +72,7 @@ msg.metabolightsAbout3=We will also offer user-submission tools and have strong 
 msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods. MetaboLights is a joint between development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the Griffin group in Cambridge.
 msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
-msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. \nEach public study can be found under the corresponding MTBLS-id folder.  \n\
-  Complete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
+msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. \nEach public study can be found under the corresponding MTBLS-id folder.  \nComplete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
 
 msg.backToMainPage=Back to the main page.
 msg.backToSubmitPage=Try submission again?.
@@ -132,6 +131,7 @@ msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies, and now you ca
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 msg.submitted=You've submitted
 msg.studies=studies
+msg.publish.wrong=There was a problem during the publishing process:
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
