git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@731 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -29,7 +29,6 @@ label.create=Create
 label.cancel=Cancel
 label.update=Update
 label.releaseDate=Study Public Release Date
-label.pickReleaseDate=Public Date
 label.subDate=Study Submission Date
 label.expFact=Experimental factors
 label.expId=Study identifier
@@ -54,6 +53,9 @@ label.aboutMetab=About Metabolights
 label.ftpDownload=Download experiment
 label.searchFilter=Filter by
 label.publicDate=or select when you want it do be public
+label.makestudypublic=Make study public
+label.updatestudy =Update study file
+
 
 menu.home=home
 menu.submit=submit
@@ -136,9 +138,11 @@ msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies.
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 msg.submitted=You've submitted
 msg.studies=studies
-msg.publish.wrong=There was a problem during the publishing process:
-msg.publish.ok=Your {0} study is now publicly shared with the MetaboLights community.
-msg.publish.again=Share Another Study
+msg.makestudypublic.title=Make {0} study public. {1}
+msg.makestudypublic.msg=This will make the study public. Therefore, the MetaboLights community will benefit from ....Hi,Paula! What goes here? ;-)
+msg.updatestudy.title=Update study ({0}): {1}
+msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have NOT YET created a step-by-step guide to help you.
+
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
