Small tweak to submission page and search results page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@732 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -29,6 +29,7 @@ label.create=Create
 label.cancel=Cancel
 label.update=Update
 label.releaseDate=Study Public Release Date
+label.pickReleaseDate=Public Date
 label.subDate=Study Submission Date
 label.expFact=Experimental factors
 label.expId=Study identifier
@@ -52,10 +53,9 @@ label.message=Message to the MetaboLights team
 label.aboutMetab=About Metabolights
 label.ftpDownload=Download experiment
 label.searchFilter=Filter by
-label.publicDate=or select when you want it do be public
+label.publicDate=or select which date you want it to be public
 label.makestudypublic=Make study public
 label.updatestudy =Update study file
-
 
 menu.home=home
 menu.submit=submit
