UX testing tweaks
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@733 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -116,7 +116,7 @@ msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally 
 msg.confirmAccountRequest=\n\nThrough our MetaboLights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\n\nPlease click this link to confirm that you have indeed requested this.\n\nThe MetaboLights team will then activate the account within one working day. You will receive an email message notifying you when it is active.  \n\nConfirm\: {0}
 msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
 msg.passwordResetNotification=You ({0}) have requested to reset your password for "MetaboLights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
-msg.updatedAccount=You have successfully updated your account.
+msg.updatedAccount=You have successfully updated your account
 msg.verifiedAccount=You have successfully verified your account
 msg.activatedAccount=You have successfully activated the account
 msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
