--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -139,7 +139,9 @@ msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 msg.submitted=You've submitted
 msg.studies=studies
 msg.makestudypublic.title=Make {0} study public. {1}
-msg.makestudypublic.msg=This will make the study public. Therefore, the MetaboLights community will benefit from ....Hi,Paula! What goes here? ;-)
+msg.makestudypublic.msg=This will change release date of the study public. Making it public will allow the MetaboLights community to view it or even download it. 
+msg.makestudypublic.ok.title=Public Release date updated
+msg.makestudypublic..ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have NOT YET created a step-by-step guide to help you.
 
