--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -54,7 +54,7 @@ label.aboutMetab=About Metabolights
 label.ftpDownload=Download experiment
 label.searchFilter=Filter by
 label.publicDate=or select which date you want it to be public
-label.makestudypublic=Make study public
+label.makestudypublic=Update release date
 label.updatestudy =Update study file
 
 menu.home=home
@@ -78,8 +78,7 @@ msg.metabolightsAbout3=We will also offer user-submission tools and have strong 
 msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods. MetaboLights is a joint between development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the Griffin group in Cambridge.
 msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
-msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. \nEach public study can be found under the corresponding MTBLS-id folder.  \n\
-  Complete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
+msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. \nEach public study can be found under the corresponding MTBLS-id folder.  \nComplete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
 
 msg.backToMainPage=Back to the main page.
 msg.backToSubmitPage=Try submission again?.
@@ -138,10 +137,10 @@ msg.welcomeWithStudies=Thanks {0}! You''ve submitted {1} studies.
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 msg.submitted=You've submitted
 msg.studies=studies
-msg.makestudypublic.title=Make {0} study public. {1}
-msg.makestudypublic.msg=This will change release date of the study public. Making it public will allow the MetaboLights community to view it or even download it. 
-msg.makestudypublic.ok.title=Public Release date updated
-msg.makestudypublic..ok.msg= Your study's public release date has been updated.
+msg.makestudypublic.title=Update {0} study public release date. {1}
+msg.makestudypublic.msg=This will update the public release date of the study. If you decide to make it public, you will allow the MetaboLights community to view it or even download it. 
+msg.makestudypublic.ok.title=Public release date updated
+msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have NOT YET created a step-by-step guide to help you.
 
