--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -55,14 +55,16 @@ label.ftpDownload=Download experiment
 label.searchFilter=Filter by
 label.publicDate=or select which date you want it to be public
 label.makestudypublic=Update release date
-label.updatestudy =Update study file
+label.updatestudy=Update study file
+label.viewMySubmissions=View my submissions
 
 menu.home=home
 menu.submit=submit
 menu.about=about
 menu.login=log in
 menu.myStudies=my studies
-menu.myAccount=account
+menu.myAccount=my account
+menu.myAccountCaps=My Account
 menu.logout=log out
 menu.loggedInAs=Logged in as
 menu.contact=contact
@@ -89,7 +91,7 @@ msg.loggedOutMsg=You have been logged out.
 msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
-msg.loggedOut=You have successfully logged out.
+msg.loggedOut=You've logged out. See you again soon!
 msg.credentials=Please provide your email and password for authorized access.
 msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zip archive) for upload to the MetaboLights server.
