Alternative login dialog (study submit or login)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@748 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -95,6 +95,8 @@ msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You've logged out. See you again soon!
 msg.credentials=Please provide your email and password for authorized access.
+msg.submCredentials=Hi! Welcome to MetaboLights study submission.
+msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zip archive) for upload to the MetaboLights server.
 msg.upload.notValid=Please provide a valid file name..
