--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -149,7 +149,8 @@ msg.makestudypublic.ok.title=Public release date updated
 msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have NOT YET created a step-by-step guide to help you.
-
+msg.makestudypublic.nofilefound= The IsaTab zip file for the study {0} cannot be found. Please contact MetaboLights team to sort it out.
+msg.makestudypublic.daterequired= The Public Release Date is a required field.
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
