Pre-submit page.  Caps in MetaboLights spelling
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@767 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -57,6 +57,10 @@ label.publicDate=or select which date you want it to be public
 label.makestudypublic=Update release date
 label.updatestudy=Update study file
 label.viewMySubmissions=View my submissions
+label.submitNewStudy=Submit a new study
+label.submitNewStudySub=Use this option if this study has not\n been submitted before 
+label.updateOldStudy=Update an existing study
+label.updateOldStudySub=Use this option of you have already submitted\n this study and would like to update it
 
 menu.home=home
 menu.submit=submit
@@ -96,6 +100,7 @@ msg.loggedIn=You have successfully logged in.
 msg.loggedOut=You've logged out. See you again soon!
 msg.credentials=Please provide your email and password for authorized access.
 msg.submCredentials=Hi! Welcome to MetaboLights study submission.
+msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br>
 msg.upload=Please choose your IsaTab output file (zip archive) for upload to the MetaboLights server.
@@ -131,6 +136,7 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
+msg.nothingFoundPersonal=We have no private data to show you as you have not submitted any studies yet. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
 msg.indexed=Database indexed.
 #msg.organisms=Organisms
 #msg.technologies=Technologies
