Update study functionality
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@771 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -9,7 +9,7 @@ label.submit=Submit
 label.search=search
 label.searchMetabolights=search MetaboLights
 label.file=File
-label.isatabZipFile=ISA-Tab zip file
+label.isatabZipFile=Choose ISATAB archive file
 label.filename=File name
 label.upload=Upload
 label.experimentstatuspublic=Make it public now?
@@ -55,7 +55,7 @@ label.ftpDownload=Download experiment
 label.searchFilter=Filter by
 label.publicDate=or select which date you want it to be public
 label.makestudypublic=Update release date
-label.updatestudy=Update study file
+label.updatestudy=Resubmit study
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if this study has not\n been submitted before 
@@ -154,7 +154,7 @@ msg.makestudypublic.msg=This will update the public release date of the study. I
 msg.makestudypublic.ok.title=Public release date updated
 msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
-msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have NOT YET created a step-by-step guide to help you.
+msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="submitHelp">step-by-step guide</a> to help you.
 msg.makestudypublic.nofilefound= The IsaTab zip file for the study {0} cannot be found. Please contact MetaboLights team to sort it out.
 msg.makestudypublic.daterequired= The Public Release Date is a required field.
 
