Background colors on icons
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@823 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -89,7 +89,7 @@ msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded fro
 
 
 msg.backToMainPage=Back to the main page.
-msg.backToSubmitPage=Try submission again?.
+msg.backToSubmitPage=Try submission again?
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
 msg.loggedOutHeader=Logged Out
