Changed tomcat deployment.  Usernames and passwords are set under $CATALINA_HOME/conf/Catalina/localhost
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@830 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -136,7 +136,7 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
-msg.nothingFoundPersonal=We have no private data to show you as you have not submitted any studies yet. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
+msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
 msg.indexed=Database indexed.
 #msg.organisms=Organisms
 #msg.technologies=Technologies
