Update study functionality
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@832 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -155,11 +155,14 @@ msg.makestudypublic.ok.title=Public release date updated
 msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="submitHelp">step-by-step guide</a> to help you.
+msg.updatestudy.ok.title=Study {0} updated.
+msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}. 
 msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact MetaboLights team to sort it out.
 msg.makestudypublic.daterequired=The Public Release Date is a required field.
 msg.validation.studynotowned=You are not the owner of the study.
 msg.validation.publicstudynoteditable=A public study can not be modified.
 msg.validation.studyIdDoNotMatch=The file you are uploading has a wrong Study Identifier. The new file study identifier is {0} and you are trying to update the study {1}. Both have to match.
+msg.validation.backupFileExists=There is already a backup file for the study {0}. The process can not continue. Please contact MetaboLights team this is a technical problem.
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
