Update study functionality. Validate before removing, visualize IsaTabLog (Show only the error).
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@848 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -163,7 +163,7 @@ msg.validation.studynotowned=You are not the owner of the study.
 msg.validation.publicstudynoteditable=A public study can not be modified.
 msg.validation.studyIdDoNotMatch=The file you are uploading has a wrong Study Identifier. The new file study identifier is {0} and you are trying to update the study {1}. Both have to match.
 msg.validation.backupFileExists=There is already a backup file for the study {0}. The process can not continue. Please contact MetaboLights team this is a technical problem.
-msg.validation.invalid="The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file."
+msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
