Removed the public now button, have to choose date
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@852 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -13,7 +13,7 @@ label.isatabZipFile=Choose ISATAB archive file
 label.filename=File name
 label.upload=Upload
 label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=You can keep the experiment private to you, or make it public
+label.experimentMsgPublic=Please pick a date for when your study will be public, today or in the future
 label.email=Email address
 label.remind=Remind me
 label.resetPw=Reset password
@@ -53,7 +53,7 @@ label.message=Message to the MetaboLights team
 label.aboutMetab=About Metabolights
 label.ftpDownload=Download experiment
 label.searchFilter=Filter by
-label.publicDate=or select which date you want it to be public
+label.publicDate=Select the public release date
 label.makestudypublic=Update release date
 label.updatestudy=Resubmit study
 label.viewMySubmissions=View my submissions
@@ -189,5 +189,6 @@ NotEmpty.concatUsForm.message=Message must not be empty
 Entry.fileMissing=File does not exist, please contact the MetaboLights Team
 Entry.notAuthorised=You are not authorised to access this file, please log in as the submitter
 BIISubmit.fileEmpty=File must not be empty
+BIISubmit.dateEmpty=You must choose a date for the study to become public, this can be up to 5 years in the future
 BIISubmit.newAccNumbers=These are the new accession numbers:
 BIISubmit.fileUploadComplete=File upload complete for
