Text in submission page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@853 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -103,7 +103,9 @@ msg.submCredentials=Hi! Welcome to MetaboLights study submission.
 msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br>
-msg.upload=Please choose your IsaTab output file (zip archive) for upload to the MetaboLights server.
+msg.upload=A brand new study
+msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://isatab.sourceforge.net/isacreator.html">ISATab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="submitHelp">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="submitHelp">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
+msg.upload.desc2=Go to <a href="submitHelp">How to submit to MetaboLights</a> guide.
 msg.upload.notValid=Please provide a valid file name..
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
 msg.uploaded.ok2=Please, bare in mind that we have replaced your identifiers with our unique MetaboLights accession numbers.
