--- a/metabolights-webapps/src/main/webapp/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/webapp/resources/messages_en.properties
@@ -159,7 +159,7 @@ msg.updatestudy.title=Update study ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="submitHelp">step-by-step guide</a> to help you.
 msg.updatestudy.ok.title=Study {0} updated.
 msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}. 
-msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact MetaboLights team to sort it out.
+msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact the MetaboLights team.
 msg.makestudypublic.daterequired=The Public Release Date is a required field.
 msg.validation.studynotowned=You are not the owner of the study.
 msg.validation.publicstudynoteditable=A public study can not be modified.
