More mandatory fields in account registration
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@909 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -178,6 +178,9 @@ NotEmpty.metabolightsUser.userName=User name must not be empty
 NotEmpty.metabolightsUser.dbPassword=Password must not be empty
 NotEmpty.metabolightsUser.userVerifyDbPassword=Password must not be empty
 NotEmpty.metabolightsUser.email=Email must not be empty
+NotEmpty.metabolightsUser.affiliation=Affiliation must not be empty
+NotEmpty.metabolightsUser.affiliationUrl=Affiliation URL must not be empty
+NotEmpty.metabolightsUser.address=Country must not be empty
 Email.metabolightsUser.email=This does not look like a valid email address.
 Match.metabolightsUser.passwords=Provided passwords do not match.
 Duplicate.metabolightsUser.userName=This user name already exists in our database.
