Redesign entry page, 1st step.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@935 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -61,6 +61,10 @@ label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if your study has not been submitted before
 label.updateOldStudy=Update an existing study
 label.updateOldStudySub=Use this option if you like to update a previously submitted study
+label.studyDesign=Study Design
+label.protocols=Protocols
+label.data=Assays
+label.metaboliteIdentification=Metabolite Identification
 
 menu.home=home
 menu.submit=submit
