--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -65,6 +65,10 @@ label.studyDesign=Study Design
 label.protocols=Protocols
 label.data=Assays
 label.metaboliteIdentification=Metabolite Identification
+label.publications=Publications
+label.organisms=Organism(s)
+label.studyDesign=Study Design Description
+label.experimentalFactors=Experimental Factors
 
 menu.home=home
 menu.submit=submit
