--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -61,14 +61,15 @@ label.submitNewStudy=Submit a new study
 label.submitNewStudySub=Use this option if your study has not been submitted before
 label.updateOldStudy=Update an existing study
 label.updateOldStudySub=Use this option if you like to update a previously submitted study
-label.studyDesign=Study Design
+label.studyDesign=Study Design Description
 label.protocols=Protocols
-label.data=Assays
+label.data=Data
 label.metaboliteIdentification=Metabolite Identification
 label.publications=Publications
 label.organisms=Organism(s)
-label.studyDesign=Study Design Description
 label.experimentalFactors=Experimental Factors
+label.data.table.groupName=Raw Data Group
+label.data.table.name=Raw Data Name
 
 menu.home=home
 menu.submit=submit
