Add metabolites to the entry page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@952 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -70,6 +70,9 @@ label.organisms=Organism(s)
 label.experimentalFactors=Experimental Factors
 label.data.table.groupName=Raw Data Group
 label.data.table.name=Raw Data Name
+label.metabolites=Metabolite Identification
+label.metabolites.identifier=Identifier
+label.metabolites.description=Description
 
 menu.home=home
 menu.submit=submit
