New download page for the plugin
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@954 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -88,6 +88,7 @@ menu.contact=contact
 menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
 menu.downloadHelp=Download data from MetaboLights
+menu.downloadplugin=Download latest metabolite identification plugin
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
@@ -99,7 +100,8 @@ msg.metabolightsAbout4=MetaboLights semantic quality will be based on various co
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
 msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
 msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. Each public study can be found under the corresponding MTBLS-id folder. Complete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
-
+msg.metabolightsAbout8=We are currently working on a comprehensive submissions guide.  Whilst we are working on this, please take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
+msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/Plugin_BETA/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
@@ -151,6 +153,7 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed... 
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
+msg.noPageFound=We could not find the page requested:
 msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
 msg.indexed=Database indexed.
 msg.showing=showing
