--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -75,6 +75,7 @@ label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 
 menu.home=home
+menu.browse=browse
 menu.submit=submit
 menu.about=about
 menu.login=log in
@@ -96,12 +97,13 @@ msg.metabolightsAbout=<a href="about">About MetaboLights.</a>
 msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
 msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structures.  
 msg.metabolightsAbout3=We offer user-submission tools and have strong reporting capabilities. We will utilise and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
-msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as BRENDA (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the Metabolomics Society and the Metabolomics Standards Initiative.
-msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <A href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</A>.<br>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
-msg.metabolightsAbout6=Experimental data gets submitted to MetaboLights in <a href="http://isatab.sourceforge.net/index.html">isatab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
+msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as <a href="http://www.brenda-enzymes.org/">BRENDA</a> (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the <a href="http://www.metabolomicssociety.org/">Metabolomics Society</a> and the associated Metabolomics Standards Initiative (MSI).
+msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <a href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</a>.<br/>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboloLights Metabolomics database with various different components focused on both data standards and primary experimental data. The resource will be cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
+msg.metabolightsAbout6=MetaboLights submissions are powered by the <a href="http://www.isa-tools.org/">ISA software suite.</a> so experimental data gets submitted in <a href="http://www.isa-tools.org/">ISA-Tab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
 msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/">ftp archive</a>.  Please find zip archives under the "studies" folder. Each public study can be found under the corresponding MTBLS-id folder. Complete experiments can be opened with ISACreator or you can extract the archives using your normal unzip program.
 msg.metabolightsAbout8=We are currently working on a comprehensive submissions guide.  Whilst we are working on this, please take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/Plugin_BETA/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
+msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
@@ -117,9 +119,9 @@ msg.credentials=Please provide your email and password for authorized access.
 msg.submCredentials=Hi! Welcome to MetaboLights study submission.
 msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
-msg.error.general=There was an unexpected error.<br>
+msg.error.general=There was an unexpected error.<br/>
 msg.upload=A brand new study
-msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://isatab.sourceforge.net/isacreator.html">ISATab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="submitHelp">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="submitHelp">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
+msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="submitHelp">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="submitHelp">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
 msg.upload.desc2=Go to <a href="submitHelp">How to submit to MetaboLights</a> guide.
 msg.upload.notValid=Please provide a valid file name..
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
@@ -170,7 +172,7 @@ msg.makestudypublic.msg=This will update the public release date of the study. I
 msg.makestudypublic.ok.title=Public release date updated
 msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
-msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://isatab.sourceforge.net/isacreator.html">ISACreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="submitHelp">step-by-step guide</a> to help you.
+msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://www.isa-tools.org/">ISAcreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="submitHelp">step-by-step guide</a> to help you.
 msg.updatestudy.ok.title=Study {0} updated.
 msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}. 
 msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact the MetaboLights team.
@@ -211,3 +213,5 @@ BIISubmit.fileEmpty=File must not be empty
 BIISubmit.dateEmpty=You must choose a date for the study to become public, this can be up to 5 years in the future
 BIISubmit.newAccNumbers=These are the new accession numbers:
 BIISubmit.fileUploadComplete=File upload complete for
+
+url.isatools=http://www.isa-tools.org/
