Some UTF8 database and JSP problems.  Only curators can reindex the database
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@961 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -158,6 +158,7 @@ msg.nothingFound=No results were found for your query.
 msg.noPageFound=We could not find the page requested:
 msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
 msg.indexed=Database indexed.
+msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
 msg.to=to 
 msg.emailSent=Message Sent
@@ -215,3 +216,6 @@ BIISubmit.newAccNumbers=These are the new accession numbers:
 BIISubmit.fileUploadComplete=File upload complete for
 
 url.isatools=http://www.isa-tools.org/
+#EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
+url.EBIheaderTop=/inc/head.html
+url.EBIheaderFoot=/inc/foot.html
