--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -104,6 +104,7 @@ msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded fro
 msg.metabolightsAbout8=We are currently working on a comprehensive submissions guide.  Whilst we are working on this, please take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/Plugin_BETA/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
+msg.metabolightsAbout11=We accept submissions in ISA-tab format. We are working on a submission guide, in the meantime <a href="contact">please contact us</a> us if you like to submit new studies.
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
