Tweaks to the entry page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@998 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -64,13 +64,12 @@ label.updateOldStudySub=Use this option if you like to update a previously submi
 label.studyDesign=Study Design Description
 label.protocols=Protocols
 label.data=Data
-label.metaboliteIdentification=Metabolites Identified
 label.publications=Publications
 label.organisms=Organism(s)
 label.experimentalFactors=Experimental Factors
 label.data.table.groupName=Raw Data Group
 label.data.table.name=Technology - Platform
-label.metabolites=Metabolite Identification
+label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 
