--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -104,7 +104,7 @@ msg.metabolightsAbout8=Please take a look at our comprehensive submissions <a hr
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/Plugin_BETA/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
 msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/edit">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
-msg.metabolightsAbout12=<b>pre-packaged IsaCreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
+msg.metabolightsAbout12=<b>pre-packaged ISAcreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
