Show metabolites concentration values
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1011 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -72,6 +72,8 @@ label.data.table.name=Technology - Platform
 label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
 label.metabolites.description=Description
+label.metabolites.formula=Formula
+
 
 menu.home=home
 menu.browse=browse
