quartz-scheduler for app cron jobs added. Emails are sent before when studies are going public
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1023 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -187,6 +187,8 @@ msg.validation.publicstudynoteditable=A public study can not be modified.
 msg.validation.studyIdDoNotMatch=The file you are uploading has a wrong Study Identifier. The new file study identifier is {0} and you are trying to update the study {1}. Both have to match.
 msg.validation.backupFileExists=There is already a backup file for the study {0}. The process can not continue. Please contact MetaboLights team this is a technical problem.
 msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
+msg.studytogopublic=Great news! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
+msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: http://www.ebi.ac.uk/metabolights/{0}
 
 # For form field verification email 
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
